2005-04-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c (render_cb): Code improvements for the background
	rendering. Also fade to the background colour rather than black
	during the destruction animation.

	* drawing.c:
	* ui.h:
	* ui.c: Remove init_pixmaps and distribute initialisation to
	be done in a just-in-time fashion.

	* drawing.c: Draw the cursor with a brighter (not necessarily
	better) colour and make it two pixels wide. Also draw the top and
	bottom lines in the cirrect place.
	
2005-04-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c: Preliminary support for non black and white
	background and grid. The colours are still awful though.

2005-04-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ui.c: 
	* ui.h:
	* game.c: Remove the ball count message and just use the points
	message. This solves the criticism in bug #172359 via a different
	route.
	
	* help/C/same-gnome.xml: 
	* drawing.h: 
	* same-gnome.h: 
	* ui.c:
	* drawing.c: Install a fast-animation option.

2005-04-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c:
	* ui.c: Fullscreen toggle -> Fullscreen / Leave Fullscreen.
	Use stock items from games-stock.h. Use actions rather than
	widgets to store UI references.

2005-03-24  Dennis Cranston <dennis_cranston@yahoo.com>

	* ui.c:  Use an etched in shadow for list view.
	
2005-03-23  Dennis Cranston  <dennis_cranston@yahoo.com>

	* ui.c: Make theme dialog more HIG compliant.
	
2005-03-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ui.c: Add a keyboard shortcut for fullscreen mode.

	* same-gnome.schemas.in: Fix typo in the schema file (bug
	#167273).

	* ui.c: Fix typos (bugs #166551 and #167276).

2005-03-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/same-gnome.xml: Yet more updates. I actually
	spell-checked it this time. Also fixed up one of the pictures, I
	have no idea how a lime green line got down one side of it.
