@@ -1,3 +1,13 @@
+2005-05-25  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* ui.c: Use the new games_scores_dialog API for setting the
+	buttons and further reduce evil-looking code.
+
+2005-05-24  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* ui.c (game_over_dialog): Initialise baddialog and use the new
+	_set_message method of games_scores_dialog.
+
 2005-04-22  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* drawing.c (render_cb): Code improvements for the background
